# California_Housing_Price_Estimation

./: Dockerfile  README.md  app.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: azure-container-webapp.yml  docker.yml  main-CaliforniaHousingPriceEstimation(production).yml  main_californiahousingpriceestimation.yml
config/: config.yaml
housing/artifact/data_transformation/2025-10-08-12-53-21/preprocessed/: preprocessed.pkl
housing/artifact/data_transformation/2025-10-08-13-04-04/transformed_data/train/: housing.npz
housing/artifact/data_transformation/2025-10-10-12-30-07/transformed_data/test/: housing.npz
housing/artifact/data_transformation/2025-10-10-12-45-12/preprocessed/: preprocessed.pkl
housing/artifact/data_validation/2025-09-15-11-42-01/: test_report.json  train_report.json
housing/artifact/experiment/: experiment.csv
housing/artifact/model_evaluation/: model_evaluation.yaml
housing/component/: data_ingestion.py  data_transformation.py  data_validation.py  model_evaluation.py  model_pusher.py  model_trainer.py
housing/config/: configuration.py
housing/constant/: __init__.py
housing/entity/: artifact_entity.py  config_entity.py  experiment.py  housing_predictor.py  model_factory.py
housing/exception/: __init__.py
housing/logger/: __init__.py
housing/pipeline/: pipeline.py
housing/util/: util.py
notebook/: test.ipynb
saved_models/20251010123240/: model.pkl
templates/: header.html  index.html  log_files.html
